<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_homework"
        android:icon="@drawable/ic_dashboard_homework"
        android:title="@string/homework" />

    <item
        android:id="@+id/navigation_fees"
        android:icon="@drawable/ic_nav_fees"
        android:title="@string/fees" />

    <item
        android:id="@+id/navigation_noticeBoard"
        android:icon="@drawable/ic_email_filled"
        android:title="@string/notice" />

    <item
        android:id="@+id/navigation_reportCard"
        android:icon="@drawable/ic_nav_reportcard"
        android:title="@string/exam" />

</menu>
