<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:padding="5dp"
    android:orientation="vertical"
    android:weightSum="2">

    <LinearLayout
        android:id="@+id/gpa_adapterlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5"
        android:orientation="horizontal"
        android:visibility="visible">

        <TextView
            android:id="@+id/subject"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.6"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center|left"
            android:text="@string/subject"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/textHeading"
            android:textSize="@dimen/secondaryText"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:id="@+id/gradepoint"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:visibility="visible"
            android:layout_weight="0.7"
            android:fontFamily="sans-serif-smallcaps"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:typeface="sans"
            android:gravity="center"
            android:textSize="@dimen/secondaryText"
            android:textColor="@color/textHeading"
            android:textStyle="bold"
            android:text="@string/gradepoint"/>

        <TextView
            android:id="@+id/credit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:typeface="sans"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="center"
            android:fontFamily="sans-serif-smallcaps"
            android:layout_weight="1"
            android:text="@string/CreditHours"
            android:textSize="@dimen/secondaryText"
            android:textColor="@color/textHeading"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/quality"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:fontFamily="sans-serif-smallcaps"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:typeface="sans"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/QualityPoints"
            android:textSize="@dimen/secondaryText"
            android:textColor="@color/textHeading"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/note"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-smallcaps"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:typeface="sans"
            android:gravity="end"
            android:padding="5dp"
            android:text="@string/note"
            android:textSize="@dimen/secondaryText"
            android:textColor="@color/textHeading"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>

